--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
         </nav>
         <article class="flex-itm" id="artID">
             <form action="index2.html" name="myForm" target="_blank">
-                <h2>Опрос телепередачи</h2>
+                <h2>Опросы телепередачи</h2>
                 <div class="inLabe">
                     <label for="inputName">Имя:</label>
                     <input name="name" id="inputName" required>
